# sshs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  flake.nix  go.mod  go.sum  main.go  test
.github/workflows/: main.yml  pr.yml  push.yml  release.yml
cmd/: generate.go  main.go  root.go
docker/sshd/: Dockerfile  entrypoint.sh  sshd_config
docs/: user-guide.md
internal/display/: display.go
internal/display/components/: list.go
internal/ssh/: config.go  ssh.go
src/: main.rs  searchable.rs  ssh.rs  test_support.rs  ui.rs
src/ssh_config/: host.rs  host_entry.rs  mod.rs  parser.rs  parser_error.rs
src/window/: delete.rs  mod.rs
testdata/: basic.conf  comments.conf  docker.conf  global_settings.conf  identity_agent_with_spaces.conf  search_selection.conf  spaces_docker.conf  spaces_in_name.conf  unknown_entry.conf  unparseable.conf
testdata/include/: included.conf
testdata/ssh/: test_key  test_key.pub
ui/: hosts.go  multifocusflex.go  noinnerborderstable.go  searchbar.go
