[package]
name = "sshs"
version = "4.0.0"
edition = "2021"

[[bin]]
name = "sshs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
itertools = "0.12.1"
ratatui = "0.26.1"
regex = "1.10.3"
shellexpand = "3.1.0"
shlex = "1.3.0"
ssh2-config = "0.2.3"
tui-input = "0.8.0"
unicode-width = "0.1.11"
