[package]
name = "sshs"
version = "4.7.1"
edition = "2021"
description = "Terminal user interface for SSH"
license = "MIT"
authors = ["Nathanael Demacon"]

[[bin]]
name = "sshs"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
glob = "0.3.2"
handlebars = "6.3.2"
itertools = "0.14.0"
ratatui = "0.29.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
shlex = "1.3.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tui-input = "0.11.1"
unicode-width = "0.2.0"

[dev-dependencies]
tempdir = "0.3.7"
